[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/UI/Menu/BG.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Menu/Frame.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Menu/LeftBG.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Menu/RightBG.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Menu/PlayerFrame.png" type="Texture" id=5]
[ext_resource path="res://UI/PlayerWearSlot.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/UI/Menu/PlayerBG.png" type="Texture" id=7]
[ext_resource path="res://Assets/Others/shadow.png" type="Texture" id=8]
[ext_resource path="res://Assets/Top_Clothes/Walk/Top_1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Bodies/Walk/char1_walk.png" type="Texture" id=10]
[ext_resource path="res://Assets/Bottom_Clothes/Walk/Bottom_1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Shoes/Walk/Shoes_1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Hair/Walk/Hair_1.png" type="Texture" id=13]
[ext_resource path="res://UI/CharacterCreator.gd" type="Script" id=14]
[ext_resource path="res://Assets/UI/Menu/Slider.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/Menu/Grabber.png" type="Texture" id=16]
[ext_resource path="res://Assets/UI/Menu/PIXEL-LI.TTF" type="DynamicFontData" id=17]
[ext_resource path="res://Assets/UI/Menu/StartButton.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 17 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 48, 14 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="CharacterCreator" type="CanvasLayer"]
script = ExtResource( 14 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TextureRect"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 500, 300 )
theme = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="TextureRect/Panel"]
margin_top = 50.0
margin_right = 293.0
margin_bottom = 149.0
rect_scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBG" type="TextureRect" parent="TextureRect/Panel/Frame"]
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 11.0
margin_right = 86.0
margin_bottom = -11.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Panel/Frame/LeftBG"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPlayerSlots" type="VBoxContainer" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer"]
margin_right = 18.0
margin_bottom = 77.0
size_flags_horizontal = 3
alignment = 1

[node name="PlayerWearSlot" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/LeftPlayerSlots" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 18.0
margin_right = 18.0
margin_bottom = 36.0

[node name="PlayerWearSlot2" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/LeftPlayerSlots" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 29.0
margin_right = 18.0
margin_bottom = 47.0

[node name="PlayerFrame" type="TextureRect" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer"]
margin_left = 22.0
margin_top = 9.0
margin_right = 54.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/PlayerFrame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -23.0
margin_right = 12.0
margin_bottom = 25.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/PlayerFrame/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow" type="Sprite" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/PlayerFrame/TextureRect/Control"]
position = Vector2( 17.2353, 20.1176 )
texture = ExtResource( 8 )

[node name="body" type="Sprite" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/PlayerFrame/TextureRect/Control"]
position = Vector2( 17.2353, 8.94118 )
texture = ExtResource( 10 )
hframes = 8
vframes = 4

[node name="top_clothes" type="Sprite" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/PlayerFrame/TextureRect/Control"]
position = Vector2( 17.2353, 8.94118 )
texture = ExtResource( 9 )
hframes = 8
vframes = 4

[node name="bottom_clothes" type="Sprite" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/PlayerFrame/TextureRect/Control"]
position = Vector2( 17.2353, 8.94118 )
texture = ExtResource( 11 )
hframes = 8
vframes = 4

[node name="shoes" type="Sprite" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/PlayerFrame/TextureRect/Control"]
position = Vector2( 17.2353, 8.94118 )
texture = ExtResource( 12 )
hframes = 8
vframes = 4

[node name="hair" type="Sprite" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/PlayerFrame/TextureRect/Control"]
position = Vector2( 17.2353, 8.94118 )
texture = ExtResource( 13 )
hframes = 8
vframes = 4

[node name="RightPlayerSlots" type="VBoxContainer" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer"]
margin_left = 58.0
margin_right = 77.0
margin_bottom = 77.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerWearSlot" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/RightPlayerSlots" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 18.0
margin_right = 19.0
margin_bottom = 36.0

[node name="PlayerWearSlot2" parent="TextureRect/Panel/Frame/LeftBG/HBoxContainer/RightPlayerSlots" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 29.0
margin_right = 19.0
margin_bottom = 47.0

[node name="RightBG" type="TextureRect" parent="TextureRect/Panel/Frame"]
anchor_bottom = 1.0
margin_left = 92.0
margin_top = 11.0
margin_right = 284.0
margin_bottom = -11.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Panel/Frame/RightBG"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/Panel/Frame/RightBG/HBoxContainer"]
margin_right = 94.0
margin_bottom = 77.0
size_flags_horizontal = 3
alignment = 1

[node name="BodySlider" type="HSlider" parent="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer"]
margin_left = 23.0
margin_top = 3.0
margin_right = 71.0
margin_bottom = 17.0
rect_min_size = Vector2( 48, 14 )
size_flags_horizontal = 4
custom_icons/tick = ExtResource( 16 )
custom_icons/grabber_disabled = ExtResource( 16 )
custom_icons/grabber_highlight = ExtResource( 16 )
custom_icons/grabber = ExtResource( 16 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
min_value = 1.0
max_value = 8.0
value = 1.0
rounded = true

[node name="BodyLabel" type="Label" parent="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 94.0
margin_bottom = 36.0
text = "Body"
align = 1
valign = 1

[node name="HairSlider" type="HSlider" parent="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer"]
margin_left = 23.0
margin_top = 40.0
margin_right = 71.0
margin_bottom = 54.0
rect_min_size = Vector2( 48, 14 )
size_flags_horizontal = 4
custom_icons/tick = ExtResource( 16 )
custom_icons/grabber_disabled = ExtResource( 16 )
custom_icons/grabber_highlight = ExtResource( 16 )
custom_icons/grabber = ExtResource( 16 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
min_value = 1.0
max_value = 4.0
value = 1.0
rounded = true

[node name="HairLabel" type="Label" parent="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 94.0
margin_bottom = 73.0
text = "Hair"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect/Panel/Frame/RightBG/HBoxContainer"]
margin_left = 98.0
margin_right = 192.0
margin_bottom = 77.0
size_flags_horizontal = 3
alignment = 1

[node name="TopSlider" type="HSlider" parent="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer2"]
margin_left = 23.0
margin_top = 3.0
margin_right = 71.0
margin_bottom = 17.0
rect_min_size = Vector2( 48, 14 )
size_flags_horizontal = 4
custom_icons/tick = ExtResource( 16 )
custom_icons/grabber_disabled = ExtResource( 16 )
custom_icons/grabber_highlight = ExtResource( 16 )
custom_icons/grabber = ExtResource( 16 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
min_value = 1.0
max_value = 4.0
value = 1.0
rounded = true

[node name="TopLabel" type="Label" parent="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer2"]
margin_top = 21.0
margin_right = 94.0
margin_bottom = 36.0
text = "Top Clothes"
align = 1
valign = 1

[node name="BottomSlider" type="HSlider" parent="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer2"]
margin_left = 23.0
margin_top = 40.0
margin_right = 71.0
margin_bottom = 54.0
rect_min_size = Vector2( 48, 14 )
size_flags_horizontal = 4
custom_icons/tick = ExtResource( 16 )
custom_icons/grabber_disabled = ExtResource( 16 )
custom_icons/grabber_highlight = ExtResource( 16 )
custom_icons/grabber = ExtResource( 16 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
min_value = 1.0
max_value = 4.0
value = 1.0
rounded = true

[node name="BottomLabel" type="Label" parent="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer2"]
margin_top = 58.0
margin_right = 94.0
margin_bottom = 73.0
text = "Bottom Clothes"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="TextureRect/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.5
margin_top = -41.0
margin_right = 26.5
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
texture_disabled = ExtResource( 18 )
texture_focused = ExtResource( 18 )

[connection signal="value_changed" from="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer/BodySlider" to="." method="_on_BodySlider_value_changed"]
[connection signal="value_changed" from="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer/HairSlider" to="." method="_on_HairSlider_value_changed"]
[connection signal="value_changed" from="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer2/TopSlider" to="." method="_on_TopSlider_value_changed"]
[connection signal="value_changed" from="TextureRect/Panel/Frame/RightBG/HBoxContainer/VBoxContainer2/BottomSlider" to="." method="_on_BottomSlider_value_changed"]
[connection signal="pressed" from="TextureRect/Panel/TextureButton" to="." method="_on_TextureButton_pressed"]
